--- a/styles/header.css
+++ b/styles/header.css
@@ -28,9 +28,34 @@
     display: none;
     position: absolute;
     top: 100%;
+    width: 60vw;
 }
+
 
 /*aparece quando clica no menu*/
 .container__botao:checked ~ .lista-menu {
     display: block;
+}
+
+.lista-menu__titulo, .lista-menu__item {
+    padding: 1em;
+    background-color: var(--branco);
+}
+
+.lista-menu__titulo {
+    color: var(--laranja);
+    font-weight: 700;
+}
+
+.lista-menu__link {
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip:text; /*cor vai ficar só onde tem texto*/
+    text-transform: uppercase;/*maiusculo*/
+}
+
+/*sumi botao de check*/
+.container__botao{
+    display: none;
 }
