--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 /*menu hamburguer*/
 @import url("styles/header.css");
-@import url(styles/banner.css);
+@import url("styles/banner.css");
+@import url("styles/carrossel.css");
 
 /*variaveis*/
 :root{
