--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 @import url("styles/banner.css");
 @import url("styles/carrossel.css");
 @import url("styles/topicos.css");
+@import url("styles/contato.css");
+@import url("styles/rodape.css");
 
 /*variaveis*/
 :root{
