--- a/styles/header.css
+++ b/styles/header.css
@@ -59,3 +59,52 @@
 .container__botao{
     display: none;
 }
+
+.container__titulo {
+    display: none;
+}
+
+.opções{
+    display: none;
+}
+
+
+/*tela grande*/ 
+@media screen and (min-width: 1024px) {
+   
+    .container__titulo, .container__titulo--negrito {
+        font-family: var(--fonte-secundario);
+        font-size: 30px;
+    }
+
+    .container__titulo {
+        font-weight: 400;
+        display: block;
+    }
+
+    .container__titulo--negrito {
+        font-weight: 700;
+    }
+
+    .opções{
+        display: flex;
+    }
+
+    .opções__item {
+        padding: 0 1em;
+        text-transform: uppercase;
+    }
+
+    .opções__link {
+        text-decoration: none;
+        color: var(--preto);
+    }
+
+    .container__imagem-transparente {
+        display: none;
+    }
+
+    .cabeçalho__menu-hamburguer {
+        display: none;
+    }
+}
