--- a/styles/banner.css
+++ b/styles/banner.css
@@ -36,3 +36,18 @@
     background-position: 1em;
 
 }
+
+/* TELA TABLET*/
+@media screen and (min-width: 1024px) {
+    .banner__titulo {
+        font-size: 36px;
+    }
+
+    .banner__pesquisa {
+        width: 50%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 7em;
+    }
+}
