--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -71,3 +71,30 @@
     font-weight: 700;
     text-decoration: none;
 }
+
+/* TELA TABLET*/
+@media screen and (min-width: 1024px) {
+    .descrição__titulo{
+        font-size: 26px;
+    }
+
+    /*bolinhas*/
+    .swiper-pagination{
+        margin: 2em 0 3em 0;
+    }
+
+    .swiper {
+        width: 60%;
+    }
+    
+    /*setinhas*/
+    .swiper-button-prev, .swiper-button-next {
+        display: block;
+        top: 60%;
+    }
+
+    .card {
+        width: 40%;
+        margin: 2em auto;
+    }
+}
