tela para desktop

--- a/styles/banner.css
+++ b/styles/banner.css
@@ -51,3 +51,18 @@
         background-position: 7em;
     }
 }
+
+/* TELAS DESKTOP */
+@media screen and (min-width: 1728px) {
+    .banner__pesquisa  {
+        width: 35%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 12em;
+    }
+
+    .banner{
+        padding: 6em 0;
+    }
+}
