--- a/styles/contato.css
+++ b/styles/contato.css
@@ -56,8 +56,12 @@
    .contato__email {
     width: 30%;
    }
+}
 
-   
-   
+/* TELA DEESKTOP */
+@media screen and (min-width:1728px) {
+    .contato {
+        padding: 3em 20vw;
+    }
 }
 
