--- a/styles/header.css
+++ b/styles/header.css
@@ -68,6 +68,9 @@
     display: none;
 }
 
+.container__texto {
+    display: none;
+}
 
 /* TELA TABLET*/
 @media screen and (min-width: 1024px) {
@@ -115,5 +118,28 @@
 
     .opções__botão{
         display: none;
+    }
+
+}
+
+/* TELA DESKTOP*/
+@media screen and (min-width: 1728px) {
+    .container__link {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: var(--preto);
+    }
+    
+    .cabeçalho {
+        padding: 0 2em;
+    }
+    
+    .opções {
+        margin-right: auto;
+    }
+
+    .container__texto {
+        display: block;
     }
 }
