--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -44,3 +44,15 @@ hr{
         font-size: 24px;
     }
 }
+
+/* TELA DESKTOP*/
+@media screen and (min-width: 1728px) {
+    .lista-rodapé {
+        border-left: 1px solid var(--cinza-claro) ;
+        padding-left: 1em;
+    }
+    
+    .rodapé {
+        padding: 3em 0;
+    }
+}
